Quartz sync: Dec 22, 2024, 10:42 PM

--- a/content/Linear Algebra/1. Linear Equations.md
+++ b/content/Linear Algebra/1. Linear Equations.md
@@ -6,5 +6,23 @@ tags:
  ## 1.1 Fields
  This book assumes that you the reader is familiar with elementary algebra of real and complex numbers.
 
-### 
- 
+#### Properties of Algebra
+
+Let $F$ denote either the set of real numbers or the set of complex numbers.
+
+**1. Addition is commutative**,
+		$$
+		x + y = y + x
+		$$
+		for all $x$ and $y$ in $F$.
+ **2. Addition is associative**,
+ $$
+ x + (y + z) = (x + y) + z
+ $$
+		 for all $x$ and $y$ in $F$.
+**3. Multiplication is commutative,**
+$$
+xy = yx
+$$
+		for all $x$ and $y$ in $F$.
+**4. Multiplication is associative**
