Quartz sync: Dec 22, 2024, 11:00 PM

--- a/content/Linear Algebra/1. Linear Equations.md
+++ b/content/Linear Algebra/1. Linear Equations.md
@@ -3,26 +3,77 @@ title: Linear Equations
 draft: false
 tags:
 ---
- ## 1.1 Fields
- This book assumes that you the reader is familiar with elementary algebra of real and complex numbers.
+## 1.1 Fields
 
-#### Properties of Algebra
+This book assumes that the reader is familiar with elementary algebra of real and complex numbers.
+
+### Properties of Algebra
 
 Let $F$ denote either the set of real numbers or the set of complex numbers.
 
-**1. Addition is commutative**,
-		$$
-		x + y = y + x
-		$$
-		for all $x$ and $y$ in $F$.
- **2. Addition is associative**,
- $$
- x + (y + z) = (x + y) + z
- $$
-		 for all $x$ and $y$ in $F$.
-**3. Multiplication is commutative,**
+**1. Closure under Addition:**
+For any two elements $a, b \in F$:
 $$
-xy = yx
+a + b \in F
 $$
-		for all $x$ and $y$ in $F$.
-**4. Multiplication is associative**
+
+**2. Closure under Multiplication:**
+For any two elements $a, b \in F$:
+$$
+ab \in F
+$$
+
+**3. Commutativity of Addition:**
+For any two elements $a, b \in F$:
+$$
+a + b = b + a
+$$
+
+**4. Associativity of Addition:**
+For any three elements $a, b, c \in F$:
+$$
+(a + b) + c = a + (b + c)
+$$
+
+**5. Additive Identity:**
+There exists an element $0 \in F$ such that for any $a \in F$:
+$$
+a + 0 = a
+$$
+
+**6. Additive Inverse:**
+For each element $a \in F$, there exists an element $-a \in F$ such that:
+$$
+a + (-a) = 0
+$$
+
+**7. Commutativity of Multiplication:**
+For any two elements $a, b \in F$:
+$$
+ab = ba
+$$
+
+**8. Associativity of Multiplication:**
+For any three elements $a, b, c \in F$:
+$$
+(ab)c = a(bc)
+$$
+
+**9. Multiplicative Identity:**
+There exists an element $1 \in F$ such that for any $a \in F$:
+$$
+a \cdot 1 = a
+$$
+
+**10. Multiplicative Inverse:**
+For each non-zero element $a \in F$, there exists an element $a^{-1} \in F$ such that:
+$$
+a \cdot a^{-1} = 1
+$$
+
+#### Field
+Suppose there is a set $F$ of elements $x$, $y$, $z$,... with two operations, addition and multiplication, that satisfy the properties of *algebra*. Then $F$ is called a **field**.
+
+With the usual operations of addition and multiplication, the set $C$ of complex numbers is a field. The set $R$ of real numbers is also a field.
+
+**NOTE**: 
