Quartz sync: Dec 22, 2024, 11:24 PM

--- a/content/Linear Algebra/1. Linear Equations.md
+++ b/content/Linear Algebra/1. Linear Equations.md
@@ -72,8 +72,9 @@ a \cdot a^{-1} = 1
 $$
 
 #### Field
-Suppose there is a set $F$ of elements $x$, $y$, $z$,... with two operations, addition and multiplication, that satisfy the properties of *algebra*. Then $F$ is called a **field**.
+Suppose there is a set $F$ of elements $x$, $y$, $z$, ... with two operations, addition and multiplication, that satisfy the properties 1-10 of *algebra* mentioned above. Then $F$ is called a **field**.
 
 With the usual operations of addition and multiplication, the set $C$ of complex numbers is a field. The set $R$ of real numbers is also a field.
 
-**NOTE**: 
+A **subfield** of the field $C$ is a set $F$ of complex numbers which is itself a field 
+under the usual operations of addition and multiplication of complex numbers.
