Quartz sync: Jan 11, 2025, 2:03 PM

--- a/content/Databases/Relational Databases/1. Structured Query Language (SQL)/1.1 Intro to SEQUEL aka SQL.md
+++ b/content/Databases/Relational Databases/1. Structured Query Language (SQL)/1.1 Intro to SEQUEL aka SQL.md
@@ -1,9 +1,13 @@
 ---
-title: Intro to SEQUEL aka SQL
+title: 1.1 Intro to SEQUEL aka SQL
 draft: false
 tags:
 ---
 ## What is SQL?
+
+<div style="text-align: center;">
+<img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Sql_data_base_with_logo.png" alt="SQL" width="300"/>
+</div>
 
 SQL stands for Structured Query Language. It is a language used to interact with [relational databases](https://nikhilsharma.xyz/Databases/Relational_Databases/Intro-to-Relational-Databases). SQL is used to perform tasks such as updating data on a database, or retrieving data from a database. It is a standard language for relational database management systems.
 
