Quartz sync: Jan 12, 2025, 1:41 AM

--- a/content/Databases/Relational Databases/1. Structured Query Language (SQL)/1.1 Intro to SEQUEL aka SQL.md
+++ b/content/Databases/Relational Databases/1. Structured Query Language (SQL)/1.1 Intro to SEQUEL aka SQL.md
@@ -11,3 +11,33 @@ tags:
 
 SQL stands for Structured Query Language. It is a language used to interact with [relational databases](https://nikhilsharma.xyz/Databases/Relational_Databases/Intro-to-Relational-Databases). SQL is used to perform tasks such as updating data on a database, or retrieving data from a database. It is a standard language for relational database management systems.
 
+## Key Concepts
+
+### 1. Data Definition Language (DDL)
+
+DDL is used to define the structure that holds the data. The commands in DDL are used to create, modify, and delete objects such as databases, tables, and indexes. Some of the DDL commands are:
+
+- `CREATE`: Used to create objects in the database.
+- `ALTER`: Used to modify the structure of the database.
+- `DROP`: Used to delete objects from the database.
+
+### 2. Data Manipulation Language (DML)
+
+DML is used to manipulate the data itself. The commands in DML are used to insert, update, and delete data from the database. Some of the DML commands are:
+
+- `SELECT`: Used to retrieve data from the database.
+- `INSERT`: Used to insert data into a table.
+- `UPDATE`: Used to update existing data in a table.
+- `DELETE`: Used to delete data from a table.
+
+### 3. Data Control Language (DCL)
+
+DCL is used to control access to the data stored in the database. The commands in DCL are used to grant and revoke permissions on the database objects. Some of the DCL commands are:
+
+- `GRANT`: Used to grant permissions to users.
+- `REVOKE`: Used to revoke permissions from users.
+
+
+### 4. Data Query Language (DQL)
+
+DQL is used to retrieve data from the database. The commands in DQL are used to query the database and retrieve data based on certain criteria. The most commonly used DQL command is `SELECT`.
