Quartz sync: Jan 12, 2025, 1:51 AM

--- a/content/Java/2. Operators in Java.md
+++ b/content/Java/2. Operators in Java.md
@@ -3,30 +3,12 @@ title: 2. Operators in Java
 draft: false
 tags:
 ---
- 
-#### Overview
-This Java program demonstrates basic arithmetic operations, assignment operators, comparison operators, logical operators, and user input handling. It uses the `Scanner` class for input and outputs results for various operations on integers.
 
----
+## Operators in Java
 
-### Code Breakdown
+Operators in Java are symbols that perform operations on variables and values. Java supports various types of operators, such as arithmetic, assignment, comparison, and logical operators. Understanding these operators is essential for writing efficient and error-free code.
 
-#### **1. Imports**
-- **`import java.util.Scanner;`**: This imports the `Scanner` class, which is used for reading user input.
-
----
-
-#### **2. Class and Method Structure**
-
-- **`public class session2`**:
-  - The main class of the program.
-  - Contains four methods (`operation`, `assignment`, `comparison`, `logical`) and the `main` method.
-
----
-
-#### **3. Methods**
-
-##### **a. Arithmetic Operations (`operation` method)**
+##### **a. Arithmetic Operations**
 This method performs basic arithmetic and demonstrates increment/decrement operators.
 
 - **Parameters**: Two integers (`a` and `b`).
@@ -42,7 +24,7 @@ This method performs basic arithmetic and demonstrates increment/decrement opera
   - Pre-decrement (`--b`): Value is decremented before use.
 - **Output**: Prints the result of each operation.
 
-##### **b. Assignment Operations (`assignment` method)**
+##### **b. Assignment Operations**
 This method demonstrates compound assignment operators.
 
 - **Parameters**: Two integers (`a` and `b`).
@@ -54,7 +36,7 @@ This method demonstrates compound assignment operators.
   - `a %= b` (Modulus assignment)
 - **Output**: Prints the result of each assignment.
 
-##### **c. Comparison Operations (`comparison` method)**
+##### **c. Comparison Operations**
 This method demonstrates relational operators.
 
 - **Parameters**: Two integers (`a` and `b`).
@@ -67,7 +49,7 @@ This method demonstrates relational operators.
   - Less than or equal to (`a <= b`)
 - **Output**: Prints the result of each comparison.
 
-##### **d. Logical Operations (`logical` method)**
+##### **d. Logical Operations**
 This method demonstrates logical operators.
 
 - **Parameters**: Two integers (`a` and `b`).
@@ -76,23 +58,6 @@ This method demonstrates logical operators.
   - Logical OR (`||`): True if at least one condition is true.
   - Logical NOT (`!`): Negates the condition.
 - **Output**: Prints the result of each logical operation.
-
----
-
-#### **4. Main Method**
-The `main` method handles user input and calls other methods.
-
-- **Steps**:
-  1. Create an instance of the `session2` class.
-  2. Use `Scanner` to read user input:
-     - **`sc.nextInt()`**: Reads an integer.
-     - **`sc.next()`**: Reads a string until a space.
-     - **`sc.nextLine()`**: Reads a line of text.
-     - **`sc.nextDouble()`**: Reads a double.
-     - **`sc.nextFloat()`**: Reads a float.
-  3. Call methods (`operation`, `assignment`, `comparison`, `logical`) with user-provided integers.
-  4. Output the entered strings and other inputs.
-  5. Close the `Scanner` object to release resources.
 
 ---
 
@@ -111,14 +76,73 @@ The `main` method handles user input and calls other methods.
 4. **Logical Operators**:
    - Combine multiple conditions and return a boolean result.
 
-5. **Scanner Class**:
-   - Useful for reading various data types from the console.
-   - Always close the `Scanner` to avoid resource leaks.
-
-6. **Method Calls**:
-   - Ensure correct parameter passing to avoid runtime errors.
-
 ---
+
+### Example Code
+```java
+import java.util.Scanner;
+
+public class Operators {
+    public static void main(String[] args) {
+        Scanner input = new Scanner(System.in);
+
+        System.out.print("Enter the first number: ");
+        int a = input.nextInt();
+        System.out.print("Enter the second number: ");
+        int b = input.nextInt();
+
+        // Arithmetic Operations
+        System.out.println("Sum: " + (a + b));
+        System.out.println("Subtract: " + (a - b));
+        System.out.println("Multiply: " + (a * b));
+        System.out.println("Divide: " + (a / b));
+        System.out.println("Mod: " + (a % b));
+        System.out.println("Increment: " + a++);
+        System.out.println("Increment2: " + ++a);
+        System.out.println("Decrement: " + b--);
+        System.out.println("Decrement2: " + --b);
+
+        // Assignment Operations
+        a = 5;
+        b = 3;
+        a += b;
+        System.out.println("a += b: " + a);
+        a = 5;
+        b = 3;
+        a -= b;
+        System.out.println("a -= b: " + a);
+        a = 5;
+        b = 3;
+        a *= b;
+        System.out.println("a *= b: " + a);
+        a = 5;
+        b = 3;
+        a /= b;
+        System.out.println("a /= b: " + a);
+        a = 5;
+        b = 3;
+        a %= b;
+        System.out.println("a %= b: " + a);
+
+        // Comparison Operations
+        a = 5;
+        b = 3;
+        System.out.println("a == b: " + (a == b));
+        System.out.println("a != b: " + (a != b));
+        System.out.println("a > b: " + (a > b));
+        System.out.println("a < b: " + (a < b));
+        System.out.println("a >= b: " + (a >= b));
+        System.out.println("a <= b: " + (a <= b));
+
+        // Logical Operations
+        a = 5;
+        b = 3;
+        System.out.println("a == b && a > b: " + (a == b && a > b));
+        System.out.println("a == b || a > b: " + (a == b || a > b));
+        System.out.println("!(a == b): " + !(a == b));
+    }
+}
+```
 
 ### Example Run
 **Input**:
@@ -152,10 +176,3 @@ a == b && a > b: false
 a == b || a > b: true
 !(a == b): true
 ```
-
----
-
-### Best Practices
-- **Input Validation**: Check for invalid inputs to prevent exceptions (e.g., division by zero).
-- **Resource Management**: Always close the `Scanner` object.
-- **Readability**: Use meaningful variable names and comments to improve code clarity.
